--- a/assets/lang/lang.csv
+++ b/assets/lang/lang.csv
@@ -14,4 +14,5 @@ FileDialogTitle4,Save a File,保存文件至
 FileDialogOK4,Save,保存
 TabLoad,Load,加载
 TabLobby,Memorial Lobby,纪念大厅
+TabAnimation,Animation,动画
 TabSetting,Settings,设置
